# prefect-submitit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: SECURITY.md
.github/workflows/: ci.yml  release.yml
_dev/: integration-test-failures-round2.md  todo.md
_dev/_archive/: port-allocation.md  slurm-test-mocking.md  squeue-state-fallback.md
_dev/analysis/: slurm-cancellation-detection.md
_dev/design/: docker-slurm-accounting.md  docker-slurm.md  port-allocation.md  server-cli.md  slurm-intra.md  slurm-test-infra.md  srun.md
_dev/design/srun/: plan.md  srun-review.md  srun-revised.md  srun.md  srun_gap_analysis.md  srun_landscape.md
_dev/releases/: pr-message.md  release-message.md
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  slurmdbd.conf
examples/: 01_single_task_submission.ipynb  02_job_arrays_with_map.ipynb  03_batched_execution.ipynb  04_error_handling_and_cancellation.ipynb  05_local_mode_and_development.ipynb  slurm_submit_and_run.py
recipe/: meta.yaml
scripts/prefect/: init_postgres.sh  start_prefect_server.sh  stop_prefect_server.sh
src/prefect_submitit/: __init__.py  constants.py  executors.py  runner.py  submission.py  utils.py
src/prefect_submitit/futures/: __init__.py  array.py  base.py  batched.py
src/prefect_submitit/server/: __init__.py  cli.py  config.py  discovery.py  postgres.py  prefect_proc.py
tests/: conftest.py  test_runner.py  test_submission.py
tests/futures/: test_array.py  test_base.py
tests/integration/: conftest.py  helpers.py  tasks.py  test_batch.py  test_cancel.py  test_environment.py  test_failures.py  test_map.py  test_polling.py  test_slurm_kwargs.py  test_submit.py
tests/test_server/: test_cli.py  test_config.py  test_discovery.py  test_integration.py  test_postgres.py  test_prefect_proc.py
