[project]
name = "prefect-submitit"
version = "0.1.0"
description = "A Prefect 3 TaskRunner that submits tasks to SLURM clusters via submitit"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
maintainers = [
    { name = "Dexterity Systems" },
]
keywords = ["prefect", "slurm", "submitit", "hpc", "task-runner", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/uw-ssec/prefect-submitit"
Repository = "https://github.com/uw-ssec/prefect-submitit"
Issues = "https://github.com/uw-ssec/prefect-submitit/issues"

# Build settings --------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_submitit"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

# =============================================================================
# DEFAULT ENVIRONMENT - Core runtime dependencies
# =============================================================================
[tool.pixi.dependencies]
python = "3.12.*"

# Pin packaging for Prefect 3.x compatibility
packaging = ">=21.3,<25.1"

[tool.pixi.pypi-dependencies]
prefect = { version = ">=3.6,<4.0", extras = ["dask"] }
submitit = "*"  # For SLURM job submission
asyncpg = "*"  # PostgreSQL async driver for Prefect server
cloudpickle = "*"  # For serializing Python objects

# =============================================================================
# DEV FEATURE - Development tools (testing, linting)
# =============================================================================
[tool.pixi.feature.dev.dependencies]
pytest = "*"
ruff = ">=0.6"

[tool.pixi.feature.dev.pypi-dependencies]
build = ">=1.4.0,<2"
twine = ">=6.2.0,<7"

[tool.pixi.feature.dev.tasks]
test = "pytest"
fmt = "ruff format . && ruff check --fix ."
build-dist = "rm -rf dist/ && python -m build"
check-dist = "python -m twine check dist/*"
upload-testpypi = "python -m twine upload --repository testpypi dist/*"
upload-pypi = "python -m twine upload dist/*"

# =============================================================================
# ENVIRONMENTS
# =============================================================================
[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

# =============================================================================
# TOOL CONFIGURATIONS
# =============================================================================
[tool.pytest.ini_options]
minversion = "7"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]

[tool.ruff]
extend-exclude = [".pixi"]

[tool.ruff.lint]
extend-select = [
    "B",        # flake8-bugbear
    "I",        # isort
    "UP",       # pyupgrade
    "RUF",      # Ruff-specific
    "SIM",      # flake8-simplify
]
isort.required-imports = ["from __future__ import annotations"]
