[project]
name = "prefect-submitit"
version = "0.1.7"
description = "A Prefect 3 TaskRunner that submits tasks to SLURM clusters via submitit"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
maintainers = [
    { name = "Dexterity Systems" },
]
keywords = ["prefect", "slurm", "submitit", "hpc", "task-runner", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "prefect>=3.6,<4.0",
    "submitit",
    "cloudpickle",
]

[project.scripts]
prefect-server = "prefect_submitit.server.cli:main"

[project.urls]
Homepage = "https://github.com/dexterity-systems/prefect-submitit"
Repository = "https://github.com/dexterity-systems/prefect-submitit"
Issues = "https://github.com/dexterity-systems/prefect-submitit/issues"
Documentation = "https://github.com/dexterity-systems/prefect-submitit#readme"
Changelog = "https://github.com/dexterity-systems/prefect-submitit/blob/main/CHANGELOG.md"

# Build settings --------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_submitit"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

# =============================================================================
# DEFAULT ENVIRONMENT - Core runtime dependencies
# =============================================================================
[tool.pixi.dependencies]
python = "3.12.*"
importlib-metadata = "<8.8"

# Jupyter kernel (allows registering the env as a Jupyter kernel)
ipykernel = "*"

# Pin packaging for Prefect 3.x compatibility
packaging = ">=21.3,<25.1"

# PostgreSQL for Prefect server (handles concurrency better than SQLite)
postgresql = ">=16"

[tool.pixi.pypi-dependencies]
prefect-submitit = { path = ".", editable = true }
prefect = { version = ">=3.6,<4.0", extras = ["dask"] }
asyncpg = "*"  # PostgreSQL async driver for Prefect server

# =============================================================================
# DEV FEATURE - Development tools (testing, linting)
# =============================================================================
[tool.pixi.feature.dev.dependencies]
# Interactive development
ipython = "*"
ipykernel = "*"
notebook = ">=7.5.0,<8"
jupyterlab = ">=4.5.0,<5"

# Testing
pytest = "*"
pytest-timeout = "*"

# Linting and formatting
ruff = ">=0.6"
pre-commit = ">=4.3.0,<5"
mypy = ">=1.19.0,<2"

[tool.pixi.feature.dev.pypi-dependencies]
build = ">=1.4.0,<2"
twine = ">=6.2.0,<7"

[tool.pixi.feature.dev.tasks]
test = "pytest tests/ --ignore=tests/integration"
test-sbatch = { cmd = "pytest --run-slurm tests/integration/ --ignore=tests/integration/test_srun_*.py", env = { SLURM_TEST_PARTITION = "cpu" } }
test-sbatch-docker = { cmd = "pytest --run-slurm tests/integration/ --ignore=tests/integration/test_srun_*.py", env = { SLURM_TEST_PARTITION = "debug" } }
test-srun = { cmd = "salloc -n4 --mem=4G -- bash -c 'python -m pytest --run-slurm tests/integration/test_srun_*.py'", env = { SLURM_TEST_PARTITION = "cpu" } }
test-srun-docker = { cmd = "salloc -n4 --mem=4G -- bash -c 'python -m pytest --run-slurm tests/integration/test_srun_*.py'", env = { SLURM_TEST_PARTITION = "debug" } }
fmt = "ruff format . && ruff check --fix ."
install-hooks = "pre-commit install"
pre-commit = "pre-commit run --all-files"
build-dist = "rm -rf dist/ && python -m build"
check-dist = "python -m twine check dist/*"
upload-testpypi = "python -m twine upload --repository testpypi dist/*"
upload-pypi = "python -m twine upload dist/*"

# =============================================================================
# TASKS
# =============================================================================
[tool.pixi.tasks]
prefect-start = "prefect-server start --bg"
prefect-stop = "prefect-server stop --force"
install-kernel = "python -m ipykernel install --user --name=prefect-submitit --display-name='Prefect-Submitit'"
slurm-build = "docker compose -f docker/docker-compose.yml build"
slurm-up = "docker compose -f docker/docker-compose.yml up -d"
slurm-down = "docker compose -f docker/docker-compose.yml down -v"
slurm-shell = "docker compose -f docker/docker-compose.yml exec -u docker slurm bash"

# =============================================================================
# ENVIRONMENTS
# =============================================================================
[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

# =============================================================================
# TOOL CONFIGURATIONS
# =============================================================================
[tool.pytest.ini_options]
minversion = "7"
testpaths = ["tests"]
log_cli_level = "INFO"
xfail_strict = true
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = [
    "error",
    "ignore::ResourceWarning",
]
markers = [
    "slurm: tests that submit real SLURM jobs (deselected unless --run-slurm)",
    "slurm_gpu: tests that require a GPU partition",
]

[tool.ruff]
extend-exclude = ["examples", ".pixi"]

[tool.ruff.lint]
extend-select = [
    "ARG",      # flake8-unused-arguments
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "EM",       # flake8-errmsg
    "EXE",      # flake8-executable
    "G",        # flake8-logging-format
    "I",        # isort
    "ICN",      # flake8-import-conventions
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "PTH",      # flake8-use-pathlib
    "RET",      # flake8-return
    "RUF",      # Ruff-specific
    "SIM",      # flake8-simplify
    "T20",      # flake8-print
    "UP",       # pyupgrade
    "YTT",      # flake8-2020
]
ignore = [
    "PLR09",    # Too many <...>
    "PLR2004",  # Magic value used in comparison
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"src/prefect_submitit/executors.py" = ["PLC0415"]
"src/prefect_submitit/server/cli.py" = ["T20"]
"tests/**" = ["ARG002", "ARG005", "EM101", "PLC0415", "RUF043", "RUF059", "SIM117", "T20"]

[tool.mypy]
files = ["src"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "prefect.*",
    "submitit.*",
    "cloudpickle",
]
ignore_missing_imports = true

[tool.repo-review]
ignore = [
    "PY004",   # No docs folder yet
    "PC170",   # No rST files in this project
    "RTD100",  # Not using ReadTheDocs
]

[tool.codespell]
skip = "pixi.lock"
